# gpt-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  GCLOUD_SETUP.md  README.md  eiles.txt  gpt.py  pyproject.toml  train.py  train_pl.py
api/: main.py
api/utils/: model_utils.py
data/: download.sh  pavasario_balsai.txt  process_data.py
data/poetry/: degutyte.txt  maironis.txt  marcinkevicius.txt  neris.txt  radauskas.txt
notebooks/: bigram.ipynb
runs/: config.yaml
runs/run/: eiles_base.yaml  eiles_large.yaml  maironis_base.yaml  maironis_best.yaml  maironis_large.yaml  small_cpu.yaml  test_run.yaml  tinyshakespeare_base.yaml  tinyshakespeare_large.yaml
src/: train.py
src/data/: dataset.py  loading.py
src/data/preprocessing/: encodings.py  tokenziner.py
src/helpers/: wandb_helpers.py
src/models/: __init__.py  mini_gpt.py  mini_gpt_lightning.py  mini_gpt_torch.py
src/modules/: __init__.py  attention.py  bigram_language_model.py  feed_forward.py  gpt.py  head.py
src/utils/: data.py  evaluation.py
